# python-plot-mcp

./: Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  render.yaml  requirements.txt
src/python_plot_mcp/: __init__.py  __main__.py  server.py  server_http.py
