[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-plot-mcp"
version = "1.0.5"
description = "Python sandbox MCP server for matplotlib visualization"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "qwe1453098533"}]
keywords = ["mcp", "model-context-protocol", "python", "matplotlib", "visualization", "plot", "chart", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "mcp>=1.1.3",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
python-plot-mcp = "python_plot_mcp.__main__:main"
python-plot-mcp-http = "python_plot_mcp.__main__:main_http"

[project.urls]
Homepage = "https://github.com/qwe1453098533/python-plot-mcp"
Repository = "https://github.com/qwe1453098533/python-plot-mcp"
Issues = "https://github.com/qwe1453098533/python-plot-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"python_plot_mcp" = ["fonts/*"]
